# ckanext-theme-sddi

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  test.ini
ckanext/theme_sddi/: __init__.py  cli.py  helpers.py  middleware.py  plugin.py  views.py
ckanext/theme_sddi/assets/: script.js  webassets.yaml  webassets.yml
ckanext/theme_sddi/assets/css/: grouphierarchy.css  hierarchy_theme.css  theme.css
ckanext/theme_sddi/assets/js/: add_dataset_dropdown.js  hoai_phase_linkage.js  spatial_form.js
ckanext/theme_sddi/fanstatic/: hoai_phase_linkage.js
ckanext/theme_sddi/i18n/: ckanext-theme_sddi.pot
ckanext/theme_sddi/i18n/de/LC_MESSAGES/: ckanext-theme_sddi.mo  ckanext-theme_sddi.po
ckanext/theme_sddi/logic/: __init__.py  action.py  auth.py  schema.py  validators.py
ckanext/theme_sddi/templates/: base.html  page.html
ckanext/theme_sddi/templates/admin/: config.html
ckanext/theme_sddi/templates/group/: read_base.html
ckanext/theme_sddi/templates/group/snippets/: group_item.html
ckanext/theme_sddi/templates/home/: index.html  layout1.html
ckanext/theme_sddi/templates/package/: group_list.html  search.html
ckanext/theme_sddi/templates/package/snippets/: resource_item.html
ckanext/theme_sddi/templates/restricted/: restricted_request_access_base.html  restricted_request_access_form.html  restricted_request_access_result.html
ckanext/theme_sddi/templates/scheming/form_snippets/: composite_repeating.html  custom_form_fields.html  dataset_group_help.html  device_group_help.html  digital_twin_group_help.html  geoobject_group_help.html  group.html  hoai_phase.html  lifecycle_hoai.html  method_group_help.html  online_application_group_help.html  online_service_group_help.html  organization_alone.html  project_group_help.html  software_group_help.html  spatial.html
ckanext/theme_sddi/templates/snippets/: add_dataset.html  facet_list.html  group_item.html  organization_item.html
ckanext/theme_sddi/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/theme_sddi/tests/logic/: test_action.py  test_auth.py  test_validators.py
(+7 files in other folders)
