[metadata]
name = ckanext-theme-sddi
version = 0.0.1
description = This extension is designed to extend the plugins developed and maintained by the community to enable SDDI framework functions. (Further descriptions of the functions will be added when adding or changing functionality.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chair of Geoinformatics, Technical University of Munich/ckanext-theme-sddi
author = Marija Knezevic
author_email = marija.knezevic@tum.de
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN SDDI SDDI-CKAN SDDI-Katalog

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             theme_sddi = ckanext.theme_sddi.plugin:ThemeSddiPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/theme_sddi/i18n/ckanext-theme_sddi.pot
width = 80

[init_catalog]
domain = ckanext-theme_sddi
input_file = ckanext/theme_sddi/i18n/ckanext-theme_sddi.pot
output_dir = ckanext/theme_sddi/i18n

[update_catalog]
domain = ckanext-theme_sddi
input_file = ckanext/theme_sddi/i18n/ckanext-theme_sddi.pot
output_dir = ckanext/theme_sddi/i18n
previous = true

[compile_catalog]
domain = ckanext-theme_sddi
directory = ckanext/theme_sddi/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
